# update-alternatives-win

./: Cargo.toml  README.md
src/: jdk.rs  main.rs  registry_helper.rs  user_env.rs
