[package]
name = "update-alternatives"
version = "0.1.0"
edition = "2021"

[dependencies]
winreg = "0.52"
regex = "1.10.5"
clap = { version = "4.5.17", features = ["derive"] }
lazy_static = "1.5.0"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_UI_Shell", "Win32_System_Registry", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"]
